--- a/404.html
+++ b/404.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="dolyw,wang64,wang926454,随心" />
     <meta name="description" content="dolyw的404，wang64的404，随心的404" />
-    <meta name="url" http-equiv="refresh" content="5;url=https://32co.github.io/Index">
+    <meta name="url" http-equiv="refresh" content="5;url=https://32cw.github.io/Index">
     <title>404</title>
-    <link rel="shortcut icon" href="https://32co.github.io/Index/static/favicon.ico" />
+    <link rel="shortcut icon" href="https://32cw.github.io/Index/static/favicon.ico" />
     <style>
         body {
             margin: 0;
@@ -117,7 +117,7 @@
         <p id="hitokoto">获取中...</p>
         <!-- <br> ©
         <script>document.write(new Date().getFullYear())</script> 
-        <a href="https://32co.github.io/Index" target="_blank">随心</a> -->
+        <a href="https://32cw.github.io/Index" target="_blank">随心</a> -->
     </div>
 </body>
 
