--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
                             original-content="这个世界上没有天才，只有不努力的笨蛋"></h2></header>
                     <ul>
                         <li id="whole-first"><a
-                                href="https://32co.github.io/Index/go.html?url=https://395808.github.io/ms"
+                                href="https://32cw.github.io/Index/go.html?url=https://395808.github.io/ms"
                                 aria-label="Blog博客" target="_blank">Blog博客<span
                                 data-translate="Blog博客">Blog博客</span></a></li>
                         <li id="whole-second"><a
-                                href="https://32co.github.io/Index/go.html?url=https://395808.github.io/ms"
+                                href="https://32cw.github.io/Index/go.html?url=https://395808.github.io/ms"
                                 aria-label="Note笔记" target="_blank">Note笔记<span
                                 data-translate="Note笔记">Note笔记</span></a></li>
                         <li id="whole-third"><a
-                                href="https://32co.github.io/Index/go.html?url=https://395808.github.io/ms"
+                                href="https://32cw.github.io/Index/go.html?url=https://395808.github.io/ms"
                                 aria-label="Map导航" target="_blank">Map导航<span
                                 data-translate="Map导航">Map导航</span></a></li>
                         <li id="half-first"><a
-                                href="https://32co.github.io/Index/go.html?url=https://395808.github.io/ms"
+                                href="https://32cw.github.io/Index/go.html?url=https://395808.github.io/ms"
                                 aria-label="Music音乐台" target="_blank">Music音乐台<span
                                 data-translate="Music音乐台">Music音乐台</span></a></li>
                         <li class="quarter" id="quarter-first"><a
-                                href="https://32co.github.io/Index/go.html?url=https://395808.github.io/ms"
+                                href="https://32cw.github.io/Index/go.html?url=https://395808.github.io/ms"
                                 rel="noopener" aria-label="Msg留言板" target="_blank">Msg留言板<span
                                 data-translate="Msg留言板">Msg留言板</span></a></li>
                         <li class="quarter" id="quarter-second"><a
-                                href="https://32co.github.io/Index/go.html?url=https://395808.github.io/ms"
+                                href="https://32cw.github.io/Index/go.html?url=https://395808.github.io/ms"
                                 rel="noopener" aria-label="Friend友链" target="_blank">Friend友链<span
                                 data-translate="Friend友链">Friend友链</span></a></li>
                     </ul>
