--- a/old.html
+++ b/old.html
@@ -35,36 +35,36 @@
 <body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
         <div id="bg"></div>
         <div class="container">
-                <a target="_blank" href="https://32co.github.io/Index/go.html?url=https://me.dolyw.com">
+                <a target="_blank" href="https://32cw.github.io/Index/go.html?url=https://me.dolyw.com">
                         <img id="logo" src="https://cdn.jsdelivr.net/gh/wliduo/CDN@master/avatar/01_thn.png">
                 </a>
                 <div class="noxiao">
                         <!-- <h3>每天看着励志的语录，却过着颓废的人生，实在是可笑</h3>
                         <h4>每天看着励志的语录，却过着颓废的人生，你们说我可笑不可笑</h4> -->
-                        <a target="_blank" href="https://32co.github.io/Index/go.html?url=https://dolyw.com/404">
+                        <a target="_blank" href="https://32cw.github.io/Index/go.html?url=https://dolyw.com/404">
                                 <h3 id="photoMsg"><span id="msg">每天看着励志的语录却过着颓废的人生</span><span id="load"></span></h3>
                         </a>
                 </div>
                 <div id="menu1">
-                        <a target="_blank" href="https://32co.github.io/Index/go.html?url=https://map.dolyw.com">
+                        <a target="_blank" href="https://32cw.github.io/Index/go.html?url=https://map.dolyw.com">
                                 <button id="btn-1" class="btn-1">导航</button>
                         </a>
-                        <a target="_blank" href="https://32co.github.io/Index/go.html?url=https://note.dolyw.com">
+                        <a target="_blank" href="https://32cw.github.io/Index/go.html?url=https://note.dolyw.com">
                                 <button id="btn-2" class="btn-6">笔记</button>
                         </a>
-                        <a target="_blank" href="https://32co.github.io/Index/go.html?url=https://blog.dolyw.com">
+                        <a target="_blank" href="https://32cw.github.io/Index/go.html?url=https://blog.dolyw.com">
                                 <button id="btn-3" class="btn-8">博客</button>
                         </a>
-                        <a target="_blank" href="https://32co.github.io/Index/go.html?url=https://msg.dolyw.com">
+                        <a target="_blank" href="https://32cw.github.io/Index/go.html?url=https://msg.dolyw.com">
                                 <button id="btn-4" class="btn-3">留言</button>
                         </a>
-                        <a target="_blank" href="https://32co.github.io/Index/go.html?url=https://res.dolyw.com">
+                        <a target="_blank" href="https://32cw.github.io/Index/go.html?url=https://res.dolyw.com">
                                 <button id="btn-5" class="btn-7">音乐</button>
                         </a>
-                        <a target="_blank" href="https://32co.github.io/Index/go.html?url=https://friend.dolyw.com">
+                        <a target="_blank" href="https://32cw.github.io/Index/go.html?url=https://friend.dolyw.com">
                                 <button id="btn-7" class="btn-5">友链</button>
                         </a>
-                        <a target="_blank" href="https://32co.github.io/Index/go.html?url=https://cv.dolyw.com">
+                        <a target="_blank" href="https://32cw.github.io/Index/go.html?url=https://cv.dolyw.com">
                                 <button id="btn-6" class="btn-4">简历</button>
                         </a>
                         <a href="javascript:;" onclick="switchBing()">
