--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="dolyw的主页，wang926454的主页，wang64的主页，随心的主页">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://mark.dolyw.com/assets/live2d/waifu.min.css">
-    <link rel="icon" href="https://dolyw.com/static/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://395808.github.io/index/static/favicon.ico" type="image/x-icon">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="480">
     <!--[if lt IE 9]>
@@ -36,28 +36,28 @@
                     <ul>
                         <li id="whole-first"><a
                                 href="https://395808.github.io/index/go.html?url=https://395808.github.io/ms"
-                                aria-label="Blog博客" target="_blank">Blog博客<span
-                                data-translate="Blog博客">Blog博客</span></a></li>
+                                aria-label="ms1" target="_blank">ms1<span
+                                data-translate="ms1">ms1</span></a></li>
                         <li id="whole-second"><a
                                 href="https://395808.github.io/index/go.html?url=https://395808.github.io/ms"
-                                aria-label="Note笔记" target="_blank">Note笔记<span
-                                data-translate="Note笔记">Note笔记</span></a></li>
+                                aria-label="ms2" target="_blank">ms2<span
+                                data-translate="ms2">ms2</span></a></li>
                         <li id="whole-third"><a
                                 href="https://395808.github.io/index/go.html?url=https://395808.github.io/ms"
-                                aria-label="Map导航" target="_blank">Map导航<span
-                                data-translate="Map导航">Map导航</span></a></li>
+                                aria-label="ms3" target="_blank">ms3<span
+                                data-translate="ms3">ms3</span></a></li>
                         <li id="half-first"><a
                                 href="https://395808.github.io/index/go.html?url=https://395808.github.io/ms"
-                                aria-label="Music音乐台" target="_blank">Music音乐台<span
-                                data-translate="Music音乐台">Music音乐台</span></a></li>
+                                aria-label="ms4" target="_blank">ms4<span
+                                data-translate="ms4">ms4</span></a></li>
                         <li class="quarter" id="quarter-first"><a
                                 href="https://395808.github.io/index/go.html?url=https://395808.github.io/ms"
-                                rel="noopener" aria-label="Msg留言板" target="_blank">Msg留言板<span
-                                data-translate="Msg留言板">Msg留言板</span></a></li>
+                                rel="noopener" aria-label="ms5" target="_blank">ms5<span
+                                data-translate="ms5">ms5</span></a></li>
                         <li class="quarter" id="quarter-second"><a
                                 href="https://395808.github.io/index/go.html?url=https://395808.github.io/ms"
-                                rel="noopener" aria-label="Friend友链" target="_blank">Friend友链<span
-                                data-translate="Friend友链">Friend友链</span></a></li>
+                                rel="noopener" aria-label="ms6" target="_blank">ms6<span
+                                data-translate="ms6">ms6</span></a></li>
                     </ul>
                     <span class="js-cursor-container"></span>
                     <dev id="hovertreesnow"></dev>
