--- a/load.html
+++ b/load.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="dolyw,wang64,wang926454,随心" />
   <meta name="description" content="dolyw的加载中，wang64的加载中，随心的加载中" />
   <title>加载中</title>
-  <link rel="shortcut icon" href="https://dolyw.com/static/favicon.ico" />
+  <link rel="shortcut icon" href="https://395808.github.io/index/static/favicon.ico" />
 </head>
 
 <body>
