--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
   <meta name="description" content="dolyw的主页，wang64的主页，随心的主页" />
 
   <title>欢迎</title>
-  <link rel="shortcut icon" href="https://dolyw.com/static/favicon.ico" />
+  <link rel="shortcut icon" href="https://395808.github.io/index/static/favicon.ico" />
 
   <style>
     html,
