--- a/go.html
+++ b/go.html
@@ -62,7 +62,7 @@
         /* function closePage() {
             // 设个定时器，如果页面未关闭，则跳转至首页
             setTimeout(function () {
-                window.location.href = 'https://dolyw.com';
+                window.location.href = 'https://395808.github.io/index';
             }, 200);
 
             // 通用窗口关闭
