--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="page">
             <div id="card">
                 <div class="card-inner">
-                    <header><h1 data-translate="name">青空(dolyw)</h1>
+                    <header><h1 data-translate="name">32(cw)</h1>
                         <h2 id="signature" data-translate="signature"
                             original-content="这个世界上没有天才，只有不努力的笨蛋"></h2></header>
                     <ul>
